--- a/BetterDimensions/BetterDimensions.csproj
+++ b/BetterDimensions/BetterDimensions.csproj
@@ -45,6 +45,9 @@
     <Reference Include="BepInEx.Preloader">
       <HintPath>..\..\..\..\..\..\..\Program Files\Oculus\Software\Software\another-axiom-gorilla-tag\BepInEx\core\BepInEx.Preloader.dll</HintPath>
     </Reference>
+    <Reference Include="BetterDimensionEditor">
+      <HintPath>..\..\..\..\..\..\..\Program Files\Oculus\Software\Software\another-axiom-gorilla-tag\BepInEx\plugins\BetterDimensions\BetterDimensionEditor.dll</HintPath>
+    </Reference>
     <Reference Include="Cinemachine">
       <HintPath>..\..\..\..\..\..\..\Program Files\Oculus\Software\Software\another-axiom-gorilla-tag\Gorilla Tag_Data\Managed\Cinemachine.dll</HintPath>
     </Reference>
